--- a/dev/audio.html
+++ b/dev/audio.html
@@ -6,7 +6,7 @@ data-theme="dark"
 ondragstart="return false"
 oncontextmenu="return false"
 ><head><meta charset="utf-8">
-	<title></title>
+	<title>Аудио</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
